# CyberTank

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.c  game.h  game_module.c  game_module.h  main.c  save.layer  text.txt
Debugger/: debug.c  debug.h
Debugger/.ccls-cache/@@home@abstarct@Games@Debugger/: @usr@include@alloca.h.blob  @usr@include@c++@11@bits@std_abs.h.blob  @usr@include@c++@11@cstdlib.blob  @usr@include@c++@11@stdlib.h.blob  @usr@include@endian.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@time.h.blob  (+55 more)
FPS/: main  main.c  us
GameStruct/: game.c  game.h  main  main.c
ObjectStorage/: storage.c  storage.h
data/: boom.eanim  boom_color.sanim  boom_color.slayer  color_boom.sanim  tank_h.eanim  tank_prog.sanim  tank_prog_h.sanim  tank_v.eanim
graphick/: graphick.c  graphick.h  map.c  map.h  reader.c  reader.h
handlers/: game.c  handlers.h  login.c  menu.c
init/: init.c  init.h
klient/: client.c  client.h  main.c
klient/general/socket/: packet.c  (+3 more)
module/: game_module.c  game_module.h
net/client/: client.c  client.h  client_command.c  client_command.h  main.debug_c
net/general/: inet_structure.h
net/server/: main.c  server.c  server.h  server_command.c  server_command.h  server_graphick.c  server_graphick.h  server_logic.c  server_logic.h
objects/: storage.c  storage.h
physick/: collision.h  physick.c  physick.h
player/: handlers.c  handlers.h
(+112 files in other folders)
